--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,7 +32,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest tox==3.24.0 tox-gh-actions
+        pip install flake8 pytest tox==3.24.0 tox-gh-actions mypy==0.971
         pip install -r requirements.txt
     - name: Test with tox
       run: tox
