--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,5 @@
 [tox]
 envlist = python3.7, python3.8, python3.9
-minversion = 3.24.0
 
 [gh-actions]
 python = 
@@ -8,7 +7,7 @@ python =
     3.9: python3.9
 
 [testenv]
-deps = -rrequirements.txt
+deps = -rrequirements_dev.txt
 commands = 
     # stop the build if there are Python syntax errors or undefined names
     flake8 src --count --select=E9,F63,F7,F82 --show-source --statistics
@@ -17,6 +16,6 @@ commands =
     # type linting
     mypy src/
     # pytest unit
-    pytest -v test/unit
+    pytest -v tests/unit
     # pytest integration
-    pytest -v test/integration
+    pytest -v tests/integration
