--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,15 +1,17 @@
-ipykernel
 pymongo
 pymongo[srv]
 dnspython
 pandas
 numpy
 ensure
-# required for dev-env.
-pytest==7.1.3 # use for testing.
-tox==3.25.1 # use for running the code in different env.
-black==22.8.0 # use for prviding alert on indentation and syntex errors.
-flake8==5.0.4 # same
-mypy==0.971 
+
+
+# dev requirements -
+
+pytest==7.1.3
+tox==3.25.1
+black==22.8.0
+flake8==5.0.4
+mypy==0.971
 
 -e .
